# primeproperty-axum

./: Cargo.toml
migrations/2026-01-05-114122-0000_developers/: down.sql  up.sql
migrations/2026-01-12-123813-0000_banks/: down.sql  up.sql
src/: main.rs  schema.rs
src/agents/: controller.rs  model.rs
src/banks/: controller.rs  mod.rs  model.rs  routes.rs
src/developers/: controller.rs  mod.rs  model.rs  routes.rs
src/leads/: controller.rs  model.rs
src/properties/: model.rs
src/properties/controllers/: configurations.rs  create_update.rs  find.rs  mod.rs
