[package]
name = "inception-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.7"
bigdecimal = { version = "0.4.9", features = ["serde"] }
chrono = {version = "0.4.42", features = ["serde"]}
diesel = { version = "2.3.4", features = ["postgres", "r2d2", "uuid", "chrono", "numeric", "serde_json"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
openssl = {version = "0.10.75", features = ["vendored"]}
reqwest = {version = "0.12.24", features = ["json"]}
sentry = "0.46.0"
sentry-tower = {version = "0.46.0", features = ["http"]}
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.18.0"
tokio = { version = "1.42.0", features = ["full"]}
tower-http = {version="0.6.7", features = ["cors", "trace"]}
tracing = "0.1.43"
tracing-subscriber = {version = "0.3.22", features = ["env-filter"]}
uuid = {version = "1.19.0", features = ["v4", "serde"]}
